Fixing typo in session 5 slides

--- a/005_per_cog_emo.qmd
+++ b/005_per_cog_emo.qmd
@@ -54,6 +54,8 @@ library(knitr)
 
 Understand how perceptions, knowledge and emotions affect a negotiation process.
 
+# Perception
+
 ##
 
 -   **Perception** is defined as the process by which individuals acquire information from their environment through the senses.
