--- a/005_per_cog_emo.tex
+++ b/005_per_cog_emo.tex
@@ -211,7 +211,7 @@
 
 \title{Perception, Cognition, and Emotion}
 \author{Luis Francisco Gómez López}
-\date{2024-07-26}
+\date{2024-10-29}
 \institute{FAEDIS}
 
 \begin{document}
@@ -251,6 +251,8 @@
 Understand how perceptions, knowledge and emotions affect a negotiation
 process.
 \end{frame}
+
+\section{Perception}\label{perception}
 
 \begin{frame}{}
 \phantomsection\label{section-2}
