--- a/001_nature_neg.qmd
+++ b/001_nature_neg.qmd
@@ -111,6 +111,8 @@ Understand the definition of negotiation, the elements in general of this proces
 
 [^3]: For more details check out [@program_of_negotiation_batna_2012]
 
+# Mutual adjustment
+
 ##
 
 -   Because the parties are interdependent during a negotiation there is a process called **mutual adjustment** where the parties try to influence one another to reach an acceptable agreement.
@@ -120,6 +122,18 @@ Understand the definition of negotiation, the elements in general of this proces
     -   Then there are replicas and concessions where the **bargaining range** tends to be reduced.
 
     -   If the **bargaining range** is reduced enough to become a point, an agreement is reached.
+    
+##
+
+- Dilemmas in mutual adjustment
+
+    - **Dilemma of honesty**: How much truth to tell the other parties? [@lewicki_negociacion_2024, p. 15]
+    
+        - You need to gain the trust of the other parties by telling the truth but not all the truth because you can not disclose all the information
+
+    - **Dilemma of trust**: How much you should trust the other parties? [@lewicki_negociacion_2024, p. 15]
+    
+        - It depends on the reputation and past interactions with the other parties.
 
 # Approaches and tactics to negotiation
 
@@ -127,11 +141,15 @@ Understand the definition of negotiation, the elements in general of this proces
 
 -   **Distributive Negotiation Approach**: it is conceived that there is only one winner in a particular situation and a course of action is sought to be the winner.
 
-    -   Tactic: **claim value**[^4] by doing whatever is necessary to claim the reward or gain the largest piece possible [@lewicki_negociacion_2024, Chapter 1, p 16]
+    -   Tactic: **claim value**[^4] by doing whatever is necessary to claim the reward or gain the largest piece possible [@lewicki_negociacion_2024, p. 16]
 
 -   **Integrative Negotiation Approach**: attempts are made to find solutions so that both parties feel satisfied and reach their goals.
 
     -   Tactic: **create value**[^5] by finding the way for the parties involved to achieve their objectives by obtaining more resources
+
+- In general in negotiations you apply a combination of claiming and creating value [@lewicki_negociacion_2024, p. 17]
+
+    - For guidance about this aspect check out the implications and ways to create value in [@lewicki_negociacion_2024, pp. 17-18]. 
 
 [^4]: For more details check out [@spangler_creating_2003]
 
@@ -141,19 +159,19 @@ Understand the definition of negotiation, the elements in general of this proces
 
 ##
 
--   For definitions of **conflict** please check out [@lewicki_negociacion_2024, Chapter 1, p 20]
+-   For definitions of **conflict** please check out [@lewicki_negociacion_2024, p. 20]
 
     -   3 different definitions that are related are mentioned
 
--   For the different levels of **conflict** please check out [@lewicki_negociacion_2024, Chapter 1, pp. 20-21]
+-   For the different levels of **conflict** please check out [@lewicki_negociacion_2024, pp. 20-21]
 
-    -   4 levels on conflict are mentioned
+    -   4 levels of conflict are mentioned
 
     -   We will not cover the first one in the course:
 
         -   *Intrapersonal or intrapsychic conflict*
 
--   For dysfunctions and functions of **conflict** please check out [@lewicki_negociacion_2024, Chapter 1, pp. 21-22]
+-   For dysfunctions and functions of **conflict** please check out [@lewicki_negociacion_2024, pp. 21-22]
 
     -   Dysfunctions: negative aspects of conflict
     -   Functions: productive aspects of conflict
@@ -162,7 +180,7 @@ Understand the definition of negotiation, the elements in general of this proces
 
 ```{r}
 #| label: fig-conflict-diagnostic-model
-#| fig-cap: Conflict diagnostic model [@lewicki_negociacion_2024, p 23] and [@greenhalgh_smr_1986, p 47]
+#| fig-cap: Conflict diagnostic model [@lewicki_negociacion_2024, p. 23] and [@greenhalgh_smr_1986, p. 47]
 
 conflic_diag <- tibble(Dimension   = rep(
                          c("Simmetry of conflict",
@@ -243,19 +261,21 @@ conflic_diag |>
 
 ```{r}
 #| label: fig-dual-concerns-model
-#| fig-cap: Dual concerns model [@lewicki_negociacion_2024, p 24] and [@pruitt_social_2004, p 41]
+#| fig-cap: Dual concerns model [@lewicki_negociacion_2024, p. 24] and [@pruitt_social_2004, p. 41][^6]
+#| out-width: 75%
 
 dual_concern_model <- tibble(x = c(1, 1, 3, 5, 5),
                              y = c(1, 5, 3, 1, 5),
-                             labels = c("Inaction",
-                                        "Yielding",
-                                        "Compromising",
-                                        "Contending",
-                                        "Problem solving"))
+                             labels = c("Inaction (No actuar)",
+                                        "Yielding (Ceder)",
+                                        "Compromising (Conciliar)",
+                                        "Contending (Disputar)",
+                                        "Problem solving (Resolver el problema)"))
 
 dual_concern_model |> 
     ggplot() + 
-    geom_label(aes(x = x, y = y, label = labels)) +
+    geom_label(aes(x = x, y = y, label = labels),
+               size = 5) +
     geom_segment(data = tibble(x = 0,
                                y = 0,
                                yend = 0, xend = 6),
@@ -285,6 +305,7 @@ dual_concern_model |>
           axis.text         = element_text(face = "bold"))
 ```
 
+[^6]: *Compromising* is not considered as a viable strategy by [@pruitt_social_2004] but [@lewicki_negociacion_2024] consider it as a valid strategy
 
 # Course and book structure
 
@@ -292,15 +313,15 @@ dual_concern_model |>
 
 -  Cover in the course
 
-    -   Negotiation Fundamentals 
+    -   **Negotiation Fundamentals** 
     
         -  [@lewicki_negociacion_2024, chapters 1-5]
         
-    -   Negotiation Subprocesses
+    -   **Negotiation Subprocesses**
     
         -  [@lewicki_negociacion_2024, chapters 6-8]
         
-    -   Concluding Comments
+    -   **Concluding Comments**
     
         -  [@lewicki_negociacion_2024, chapter 20]
         
@@ -308,23 +329,23 @@ dual_concern_model |>
 
 -  Not cover in the course
         
-    -   Negotiation Subprocesses
+    -   **Negotiation Subprocesses**
     
         -  [@lewicki_negociacion_2024, chapter 9]
         
-    -   Negotiation Contexts
+    -   **Negotiation Contexts**
     
         -  [@lewicki_negociacion_2024, chapters 10-13]
         
-    -   Individual Differences
+    -   **Individual Differences**
     
         -  [@lewicki_negociacion_2024, chapters 14-15]
         
-    -   Negotiation across Cultures
+    -   **Negotiation across Cultures**
     
         -  [@lewicki_negociacion_2024, chapter 16]
 
-    -   Resolving Differences
+    -   **Resolving Differences**
     
         -  [@lewicki_negociacion_2024, chapter 17-19]
 
